<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_systemtid" Id="{79084c90-6441-4730-b714-f7104c257ef8}">
    <Declaration><![CDATA[TYPE ST_systemtid :
STRUCT
	timeLoDW   : UDINT;
    timeHiDW   : UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>